--- a/index.html
+++ b/index.html
@@ -3,10 +3,24 @@
   <head>
     <meta charset="utf-8">
     <title>Where it happened</title>
+    <link rel="stylesheet" href="assets/css/custom.css">
   </head>
   <body>
     <div id="map"></div>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDcZvCyTR8cKv1VJTVHj3eCgw3QWufEnAw&callback=initMap">
+    <script>
+      function initMap() {
+        var uluru = {lat: -25.363, lng: 131.044};
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 4,
+          center: uluru
+        });
+        var marker = new google.maps.Marker({
+          position: uluru,
+          map: map
+        });
+      }
+    </script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbF5VkA8lsBWqYVu0A3jiFz6wmBAxPonU&callback=initMap">
    </script>
   </body>
 </html>
