--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-// Creator : Renato Bylykbashi
-// Website : renatobylyk.com
-// Reason  : Fun ! 
-
+<!--
+ Creator : Renato Bylykbashi
+ Website : renatobylyk.com
+ Reason  : Fun !
+-->
 <!DOCTYPE html>
 <html>
     <head>
@@ -11,7 +12,7 @@
     </head>
     <body>
 	<div id="map"></div>
-
+  <!-- Custom Scripts -->
 	<script>
 	    function initMap() {
     		var greece = {lat: 37.9722781, lng: 24.1055779};
@@ -26,6 +27,9 @@
     		});
 	    }
 	</script>
+  <!-- JS FILES -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script type="text/javascript" src="assets/js/checkforEarthquake.js"></script>
 	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbF5VkA8lsBWqYVu0A3jiFz6wmBAxPonU&callback=initMap">
 	</script>
     </body>
