--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
  Website : renatobylyk.com
  Reason  : Fun !
 -->
-<!DOCTYPE html>
+
 <html>
     <head>
     	<meta charset="utf-8">
     	<title>Where it happened</title>
+      <link rel="icon" href="assets/images/RfavDark.ico" type="image/x-icon" />
     	<link rel="stylesheet" href="assets/css/custom.css">
     </head>
     <body>
